@@ -1,292 +1,191 @@
-Social Media Feed - Enterprise MVVM Architecture
-================================================
+Java Social Media Feed - MVVM Architecture
+==========================================
 
-A comprehensive **Twitter-like social media feed** application demonstrating enterprise-grade Java architecture patterns, reactive programming, and modern development practices. Perfect for learning MVVM architecture, studying design patterns, or as a foundation for social media applications.
+A Twitter-like social media feed application demonstrating MVVM architecture, reactive programming, and plugin system in Java.
 
-🌟 Features
+Features
+--------
+
+*   MVVM Architecture with clean separation of concerns
+    
+*   Reactive Programming using Java Flow API and CompletableFuture
+    
+*   Plugin System for extensible post types
+    
+*   JavaFX Desktop UI with data binding
+    
+*   Spring Boot REST API with WebFlux
+    
+*   Real-time updates via WebSocket
+    
+*   Comprehensive testing with JUnit 5 + Mockito
+    
+Architecture Overview
 -----------
 
-*   **MVVM Architecture**: Clean separation of Model, View, and ViewModel layers
-    
-*   **Reactive Programming**: Java Flow API with CompletableFuture for async operations
-    
-*   **Plugin System**: Extensible architecture for custom post types
-    
-*   **JavaFX Desktop UI**: Modern desktop application with data binding
-    
-*   **Spring Boot API**: RESTful endpoints with WebFlux reactive support
-    
-*   **Real-Time Updates**: WebSocket integration for live feed updates
-    
-*   **Comprehensive Testing**: JUnit 5 + Mockito with 95%+ coverage
-    
-*   **Performance Monitoring**: Built-in metrics and optimization tools
-    
-*   **Thread-Safe Design**: Concurrent operations with proper synchronization
-    
+`┌─────────────────────────────────────────────────────────────┐
+│                     Presentation Layer                      │
+│ ┌─────────────────┐ ┌─────────────────────────────────────┐ │
+│ │   JavaFX App    │ │       Spring Boot REST API          │ │
+│ │   (Desktop UI)  │ │     (Web API + WebSocket)           │ │
+│ └─────────────────┘ └─────────────────────────────────────┘ │
+└─────────────────────────────────────────────────────────────┘
+┌─────────────────────────────────────────────────────────────┐
+│                       ViewModel Layer                       │
+│ ┌─────────────────────────────────────────────────────────┐ │
+│ │           FeedViewModel (Reactive Binding)              │ │
+│ │         ObservableProperty + Command Pattern            │ │
+│ └─────────────────────────────────────────────────────────┘ │
+└─────────────────────────────────────────────────────────────┘
+┌─────────────────────────────────────────────────────────────┐
+│                        Plugin System                        │
+│ ┌─────────────────────────────────────────────────────────┐ │
+│ │                   PostPluginManager                     │ │
+│ │     Text │ Image │ Video │ Poll │ Link Plugins           │ │
+│ └─────────────────────────────────────────────────────────┘ │
+└─────────────────────────────────────────────────────────────┘
+┌─────────────────────────────────────────────────────────────┐
+│                      Repository Layer                       │
+│ ┌─────────────────────────────────────────────────────────┐ │
+│ │         FeedRepository (CompletableFuture)              │ │
+│ │         + Java Flow API Reactive Streams                │ │
+│ └─────────────────────────────────────────────────────────┘ │
+└─────────────────────────────────────────────────────────────┘
+┌─────────────────────────────────────────────────────────────┐
+│                         Model Layer                         │
+│ ┌─────────────────────────────────────────────────────────┐ │
+│ │   Immutable Domain Objects (Post, User, etc.)           │ │
+│ │       Builder Pattern + Functional Updates              │ │
+│ └─────────────────────────────────────────────────────────┘ │
+└─────────────────────────────────────────────────────────────┘`
 
-🏗️ Architecture Overview
--------------------------
-text┌─────────────────────────────────────────────────────────────┐  │                  Presentation Layer                         │  │  ┌─────────────────┐  ┌─────────────────────────────────────┐ │  │  │   JavaFX App    │  │     Spring Boot REST API           │ │  │  │   (Desktop UI)  │  │   (Web API + WebSocket)            │ │  │  └─────────────────┘  └─────────────────────────────────────┘ │  └─────────────────────────────────────────────────────────────┘  ┌─────────────────────────────────────────────────────────────┐  │                   ViewModel Layer                           │  │  ┌─────────────────────────────────────────────────────────┐ │  │  │          FeedViewModel (Reactive Binding)               │ │  │  │       ObservableProperty + Command Pattern          │ │  │  └─────────────────────────────────────────────────────────┘ │  └─────────────────────────────────────────────────────────────┘  ┌─────────────────────────────────────────────────────────────┐  │                    Plugin System                            │  │  ┌─────────────────────────────────────────────────────────┐ │  │  │              PostPluginManager                          │ │  │  │    Text │ Image │ Video │ Poll │ Link Plugins           │ │  │  └─────────────────────────────────────────────────────────┘ │  └─────────────────────────────────────────────────────────────┘  ┌─────────────────────────────────────────────────────────────┐  │                  Repository Layer                           │  │  ┌─────────────────────────────────────────────────────────┐ │  │  │       FeedRepository (CompletableFuture)                │ │  │  │          + Java Flow API Reactive Streams               │ │  │  └─────────────────────────────────────────────────────────┘ │  └─────────────────────────────────────────────────────────────┘  ┌─────────────────────────────────────────────────────────────┐  │                     Model Layer                             │  │  ┌─────────────────────────────────────────────────────────┐ │  │  │      Immutable Domain Objects (Post, User, etc.)       │ │  │  │        Builder Pattern + Functional Updates            │ │  │  └─────────────────────────────────────────────────────────┘ │  └─────────────────────────────────────────────────────────────┘   `
-
-🚀 Quick Start
---------------
+Quick Start
+-----------
 
 Prerequisites
 -------------
 
-*   **Java 11+** (OpenJDK or Oracle JDK)
+*   Java 11+
     
-*   **Maven 3.6+** or **Gradle 7.0+**
-    
-*   **JavaFX 17+** (for desktop application)
+*   Maven 3.6+ or Gradle 7.0+
     
 
-Clone and Run
+Run Application
+---------------
+
+`   # Clone repository
+git clone https://github.com/yourusername/java-social-media-feed.git
+cd java-social-media-feed
+
+# Run JavaFX Desktop App
+mvn clean javafx:run
+
+# Run Spring Boot API
+mvn spring-boot:run
+
+# Run tests
+mvn test
+   `
+
+Project Structure
+-----------------
+
+`src/main/java/com/socialmedia/feed/
+├── model/                    # Domain models
+├── viewmodel/               # MVVM ViewModels  
+├── repository/              # Data access layer
+├── plugin/                  # Plugin system
+├── controller/              # Spring Boot controllers
+├── view/                    # JavaFX components
+└── util/                    # Utilities
+`
+
+Architecture
+------------
+
+*   **Model**: Immutable domain objects (Post, User)
+    
+*   **View**: JavaFX UI components and Spring Boot REST API
+    
+*   **ViewModel**: FeedViewModel with reactive data binding
+    
+*   **Plugin System**: Extensible post types (Text, Image, Video, Poll, Link)
+    
+
+Key Technologies
+----------------
+
+*   Java 11+ with modern language features
+    
+*   JavaFX 17+ for desktop UI
+    
+*   Spring Boot 2.7+ for REST API
+    
+*   Java Flow API for reactive streams
+    
+*   CompletableFuture for async operations
+    
+*   JUnit 5 + Mockito for testing
+    
+
+API Endpoints
 -------------
 
-`   bash# Clone repository  git clone https://github.com/yourusername/java-social-media-feed.git  cd java-social-media-feed  # Run JavaFX Desktop Application  mvn clean javafx:run  # OR with Gradle  ./gradlew run  # Run Spring Boot API Server  mvn spring-boot:run -Dspring-boot.run.main-class=com.socialmedia.feed.SocialMediaFeedSpringBootApp  # OR with Gradle  ./gradlew bootRun  # Run All Tests  mvn test  # OR with Gradle  ./gradlew test   `
+`GET    /api/feed/posts              # Get posts with pagination
+POST   /api/feed/posts/{id}/like    # Like a post
+GET    /api/feed/posts/search       # Search posts
+WS     /api/feed/stream             # Real-time updates
+`
 
-Docker Deployment
------------------
-`   bash# Build Docker image  docker build -t social-media-feed .  # Run with Docker Compose  docker-compose up -d  # Access API at http://localhost:8080/api/feed  # WebSocket endpoint: ws://localhost:8080/api/feed/stream   `
+Usage Examples
+--------------
 
-💻 Usage Examples
------------------
+Basic Usage
+-----------
 
-JavaFX Desktop Application
---------------------------
+`FeedRepository repository = new MockFeedRepository();
+FeedViewModel viewModel = new FeedViewModel(repository);
+PostPluginManager pluginManager = new PostPluginManager();
+pluginManager.initializeDefaultPlugins();`
 
-`   javapublic class QuickStartDesktop {      public static void main(String[] args) {          // Initialize core components          FeedRepository repository = new MockFeedRepository();          FeedViewModel viewModel = new FeedViewModel(repository);          PostPluginManager pluginManager = new PostPluginManager();          pluginManager.initializeDefaultPlugins();          // Launch JavaFX application          Application.launch(SocialMediaFeedApp.class, args);      }  }   `
 
-Spring Boot REST API
---------------------
-`   java// GET /api/feed/posts?page=0&limit=20  // Returns paginated list of posts  // POST /api/feed/posts/{postId}/like  // Likes a specific post  // GET /api/feed/posts/search?query=java  // Search posts by content  // WebSocket: ws://localhost:8080/api/feed/stream  // Real-time post updates   `
+Custom Plugin
+-------------
 
-Custom Plugin Development
--------------------------
-
-`   javapublic class CustomQuotePlugin implements PostPlugin {      @Override      public PostType getSupportedPostType() {          return PostType.QUOTE;      }      @Override      public PostViewComponent createView(Post post, FeedViewModel viewModel) {          return new CustomQuoteViewComponent(post, viewModel);      }      @Override      public double calculateHeight(Post post, double availableWidth) {          return 180.0 + estimateTextHeight(post.getContent(), availableWidth);      }      @Override      public PluginMetadata getMetadata() {          return new PluginMetadata(              "CustomQuote", "1.0.0",               "Beautiful quote post renderer",               "Your Name",               Collections.emptyList()          );      }  }  // Register the custom plugin  pluginManager.registerPlugin(new CustomQuotePlugin());   `
-
-Reactive Programming Examples
------------------------------
-`   java// Async data fetching with CompletableFuture  CompletableFuture> posts = repository.fetchPosts(0, 20)      .thenApply(postList -> postList.stream()          .filter(post -> post.getLikeCount() > 10)          .collect(Collectors.toList()))      .exceptionally(throwable -> {          log.error("Failed to fetch posts", throwable);          return Collections.emptyList();      });  // Real-time updates with Java Flow API  repository.getRealTimeUpdates().subscribe(new Subscriber() {      @Override      public void onNext(Post post) {          Platform.runLater(() -> updateUI(post));      }      @Override      public void onError(Throwable throwable) {          handleError(throwable);      }      @Override      public void onComplete() {          System.out.println("Stream completed");      }  });   `
-
-🏗️ Project Structure
----------------------
-`   textsrc/  ├── main/java/com/socialmedia/feed/  │   ├── SocialMediaFeedSpringBootApp.java    # Spring Boot main class  │   ├── SocialMediaFeedApp.java              # JavaFX desktop app  │   │  │   ├── model/                               # Domain models (immutable)  │   │   ├── Post.java                       # Core post entity  │   │   ├── User.java                       # User entity    │   │   ├── PostType.java                   # Post type enum  │   │   └── ActionCommand.java              # Command pattern  │   │  │   ├── viewmodel/                          # MVVM ViewModels  │   │   ├── FeedViewModel.java              # Main feed view model  │   │   └── ObservableProperty.java         # Reactive properties  │   │  │   ├── repository/                         # Data access layer  │   │   ├── FeedRepository.java             # Repository interface  │   │   └── MockFeedRepository.java         # Mock implementation  │   │  │   ├── plugin/                             # Plugin system  │   │   ├── PostPlugin.java                 # Plugin interface  │   │   ├── PostPluginManager.java          # Plugin manager  │   │   └── plugins/                        # Plugin implementations  │   │       ├── TextPostPlugin.java  │   │       ├── ImagePostPlugin.java  │   │       ├── VideoPostPlugin.java  │   │       ├── PollPostPlugin.java  │   │       └── LinkPostPlugin.java  │   │  │   ├── reactive/                           # Reactive foundation  │   │   ├── ReactivePostStream.java         # Custom reactive stream  │   │   └── ReactiveProcessor.java          # Stream processor  │   │  │   ├── controller/                         # Spring Boot controllers  │   │   ├── FeedController.java             # REST endpoints  │   │   └── FeedWebSocketHandler.java       # WebSocket handler  │   │  │   ├── view/                              # JavaFX components  │   │   ├── TextPostViewComponent.java  │   │   ├── ImagePostViewComponent.java  │   │   ├── VideoPostViewComponent.java  │   │   ├── PollPostViewComponent.java  │   │   └── LinkPostViewComponent.java  │   │  │   └── util/                              # Utilities  │       └── PerformanceMonitor.java        # Performance tracking  │  ├── test/java/com/socialmedia/feed/  │   └── SocialMediaFeedTest.java           # Comprehensive tests  │  └── resources/      ├── application.properties             # Spring Boot config      └── styles.css                        # JavaFX styling   `
-
-🎯 Design Patterns Demonstrated
--------------------------------
-
-PatternImplementationPurpose**MVVM**FeedViewModel with reactive bindingUI/Business logic separation**Plugin**PostPluginManager + PostPluginExtensible post type system**Repository**FeedRepository interface + implementationsData access abstraction**Command**ActionCommand with async processingUser action encapsulation**Observer**ObservableProperty + PropertyChangeSupportReactive UI updates**Builder**Post.Builder, User.BuilderFluent object construction**Singleton**PostPluginManager lifecycleSingle plugin registry**Factory**Plugin view creationDynamic component instantiation
-
-🧪 Testing Strategy
--------------------
-
-Comprehensive Test Coverage
----------------------------
-`   bash# Run all tests with coverage report  mvn clean test jacoco:report  # Run specific test categories  mvn test -Dtest="*ModelTest"           # Model layer tests  mvn test -Dtest="*ViewModelTest"       # ViewModel tests    mvn test -Dtest="*PluginTest"          # Plugin system tests  mvn test -Dtest="*IntegrationTest"     # End-to-end tests  mvn test -Dtest="*PerformanceTest"     # Performance tests   `
-
-Test Categories
----------------
-
-*   **Unit Tests**: Individual component testing with mocks
+`public class CustomPlugin implements PostPlugin {
+    @Override
+    public PostType getSupportedPostType() {
+        return PostType.QUOTE;
+    }
     
-*   **Integration Tests**: Cross-layer communication validation
-    
-*   **Performance Tests**: Large dataset and concurrent access testing
-    
-*   **Plugin Tests**: Custom plugin registration and functionality
-    
-*   **UI Tests**: JavaFX component behavior validation
-    
-*   **API Tests**: Spring Boot endpoint testing
-    
+    @Override
+    public PostViewComponent createView(Post post, FeedViewModel viewModel) {
+        return new CustomViewComponent(post, viewModel);
+    }
+}
+`
 
-Example Test
+Testing
+-------
+`
+# Run all tests
+mvn test
+# Run with coverage
+mvn test jacoco:report
+# Performance tests
+mvn test -Dtest="*PerformanceTest"`
+
+
+
+Contributing
 ------------
-`   java@Test  @DisplayName("ViewModel should handle like post optimistically")  void testOptimisticLikeUpdate() throws InterruptedException {      // Given      Post originalPost = createTestPost(false, 10); // not liked, 10 likes      when(mockRepository.refreshFeed()).thenReturn(          CompletableFuture.completedFuture(List.of(originalPost))      );      when(mockRepository.likePost(originalPost.getId())).thenReturn(          CompletableFuture.completedFuture(originalPost.withLikeToggled())      );      FeedViewModel viewModel = new FeedViewModel(mockRepository);      // Wait for initial load      awaitCondition(() -> !viewModel.getPosts().isEmpty(), 2000);      // When      viewModel.likePost(originalPost.getId());      // Then - optimistic update should happen immediately      awaitCondition(() -> viewModel.getPosts().get(0).isLiked(), 100);      assertTrue(viewModel.getPosts().get(0).isLiked());      assertEquals(11, viewModel.getPosts().get(0).getLikeCount());      verify(mockRepository).likePost(originalPost.getId());  }   `
 
-📊 Performance Features
------------------------
-
-Built-in Performance Monitoring
--------------------------------
-`   java// Measure operation performance  List posts = PerformanceMonitor.measureOperation("feedLoad", () -> {      return repository.fetchPosts(0, 20).join();  });  // Get performance statistics  PerformanceStats stats = PerformanceMonitor.getStats("feedLoad");  System.out.printf("Average: %.2fms, Min: %.2fms, Max: %.2fms%n",      stats.getAverage(), stats.getMin(), stats.getMax());  // Print all performance metrics  PerformanceMonitor.printAllStats();   `
-
-Optimization Features
----------------------
-
-*   **Lazy Loading**: On-demand resource initialization
+1.  Fork the repository
     
-*   **Thread Pooling**: Efficient concurrent task execution
+2.  Create feature branch (git checkout -b feature/name)
     
-*   **Memory Management**: Proper resource cleanup and GC optimization
+3.  Commit changes (git commit -am 'Add feature')
     
-*   **Caching**: Smart caching with configurable expiration
+4.  Push to branch (git push origin feature/name)
     
-*   **Batch Operations**: Optimized bulk data processing
-    
-
-🔧 Configuration
-----------------
-
-Application Properties
-----------------------
-`   text# Server Configuration  server.port=8080  server.servlet.context-path=/api  # Performance Tuning  server.tomcat.threads.max=200  server.tomcat.accept-count=100  # WebSocket Configuration  spring.websocket.max-text-message-size=8192  # Logging  logging.level.com.socialmedia.feed=INFO  logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n   `
-
-JavaFX Deployment
------------------
-`   bash# JVM Arguments for JavaFX  --module-path /path/to/javafx/lib   --add-modules javafx.controls,javafx.fxml  -Xmx2G -Xms512M  # Create native installer with jpackage  jpackage --input target/ \           --name SocialMediaFeed \           --main-jar social-media-feed.jar \           --main-class com.socialmedia.feed.SocialMediaFeedApp \           --type app-image   `
-
-Maven Dependencies
-------------------
-`xml          org.openjfx          javafx-controls          17.0.2          org.springframework.boot          spring-boot-starter-webflux          org.junit.jupiter          junit-jupiter          test          com.fasterxml.jackson.core          jackson-databind`    
-
-🚀 Advanced Features
---------------------
-
-Real-Time Updates
------------------
-`   java// WebSocket connection for live updates  WebSocket websocket = new WebSocketClient()      .connectToServer("ws://localhost:8080/api/feed/stream");  websocket.onMessage(message -> {      Post newPost = objectMapper.readValue(message, Post.class);      Platform.runLater(() -> addPostToUI(newPost));  });   `
-
-Plugin Hot-Reloading
---------------------
-`   java// Dynamic plugin registration at runtime  public void loadPluginFromJar(Path jarPath) throws Exception {      URLClassLoader classLoader = new URLClassLoader(          new URL[]{jarPath.toUri().toURL()},          this.getClass().getClassLoader()      );      Class pluginClass = classLoader.loadClass("com.custom.MyPlugin");      PostPlugin plugin = (PostPlugin) pluginClass.getDeclaredConstructor().newInstance();      pluginManager.registerPlugin(plugin);  }   `
-
-Offline Support
----------------
-`   javapublic class OfflineFeedRepository implements FeedRepository {      @Override      public CompletableFuture> fetchPosts(int page, int limit) {          return networkRepository.fetchPosts(page, limit)              .handle((posts, throwable) -> {                  if (throwable != null) {                      // Fall back to cached data                      return cacheManager.getCachedPosts(page, limit);                  }                  // Cache successful results                  cacheManager.cachePosts(posts);                  return posts;              });      }  }   `
-
-
-Development Setup
------------------
-`   bash# Fork and clone the repository  git clone https://github.com/yourusername/java-social-media-feed.git  cd java-social-media-feed  # Create feature branch  git checkout -b feature/your-feature-name  # Make changes and test  mvn test  # Run code quality checks  mvn checkstyle:check spotbugs:check  # Submit pull request   `
-
-Code Style Guidelines
----------------------
-
-*   Follow [Google Java Style Guide](https://google.github.io/styleguide/javaguide.html)
-    
-*   Use meaningful variable and method names
-    
-*   Add comprehensive JavaDoc comments
-    
-*   Write unit tests for new features
-    
-*   Maintain 90%+ test coverage
-    
-
-📚 Learning Resources
----------------------
-
-Java Architecture & Design Patterns
------------------------------------
-
-*   [Effective Java (3rd Edition)](https://www.oreilly.com/library/view/effective-java-3rd/9780134686097/)
-    
-*   [Java Design Patterns](https://java-design-patterns.com/)
-    
-*   [Clean Architecture](https://blog.cleancoder.com/uncle-bob/2012/08/13/the-clean-architecture.html)
-    
-
-Reactive Programming
---------------------
-
-*   [Java 9+ Flow API Documentation](https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/concurrent/Flow.html)
-    
-*   [CompletableFuture Guide](https://www.baeldung.com/java-completablefuture)
-    
-*   [Reactive Streams Specification](https://www.reactive-streams.org/)
-    
-
-JavaFX Development
-------------------
-
-*   [JavaFX Documentation](https://docs.oracle.com/javase/8/javase-clienttechnologies.htm)
-    
-*   [OpenJFX Community](https://openjfx.io/)
-    
-*   [JavaFX MVVM Tutorial](https://edencoding.com/javafx-mvvm/)
-    
-
-Spring Boot & Testing
----------------------
-
-*   [Spring Boot Reference Guide](https://docs.spring.io/spring-boot/docs/current/reference/html/)
-    
-*   [JUnit 5 User Guide](https://junit.org/junit5/docs/current/user-guide/)
-    
-*   [Mockito Documentation](https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html)
-    
-
-📈 Roadmap
-----------
-
-Version 2.0 (Planned)
----------------------
-
-*    Database persistence with JPA/Hibernate
-    
-*    User authentication and authorization
-    
-*    Post commenting and threading
-    
-*    Image upload and processing
-    
-*    Push notifications
-    
-
-Version 2.1 (Future)
---------------------
-
-*    Microservices architecture
-    
-*    Docker Swarm/Kubernetes deployment
-    
-*    GraphQL API support
-    
-*    Machine learning content recommendations
-    
-*    Mobile app with React Native
-    
-
-
-🙏 Acknowledgments
-------------------
-
-*   **Java Community** for excellent libraries and frameworks
-    
-*   **JavaFX Team** for modern desktop UI capabilities
-    
-*   **Spring Team** for comprehensive enterprise framework
-    
-*   **JUnit & Mockito** for testing excellence
-    
-*   **Gang of Four** for foundational design patterns
-    
-
-🐛 Issues and Support
----------------------
-
-*   **Bug Reports**: [GitHub Issues](https://github.com/Umeshch2004/java-social-media-feed/issues)
-    
-*   **Feature Requests**: [GitHub Discussions](https://github.com/Umeshch2004/java-social-media-feed/discussions)
-    
-*   **Questions**: [Stack Overflow](https://stackoverflow.com/questions/tagged/java-social-media-feed)
-    
-
-📊 Project Stats
-----------------
-
-    
-*   **Test Coverage**: 95%+
-    
-*   **Supported Post Types**: 5 (Text, Image, Video, Poll, Link)
-    
-*   **Design Patterns**: 8 implemented
-    
-*   **Dependencies**: Minimal, well-maintained
-    
-*   **Java Version**: 11+ compatible
+5.  Create Pull Request
